Version x.x.x (not yet released)
--------------------------------

 New features:
 * Add --use-internal-co option to accelerate conversion up to 50%.
 * Add --retain-conflicting-attic-files option.
 * Add --no-cross-branch-commits option.
 * RevisionRecorder hook allows file text/deltas to be recorded in pass 1.
 * RevisionReader hook allow file text to be retrieved from RevisionRecorder.
 * Slightly changed the order that properties are set, for more flexibility.
 * Don't set svn:keywords on files for which svn:eol-style is not set.
 * Implement issue #53: Allow --trunk='' for --trunk-only conversions.

 Bugs fixed:
 * Fix issue #97: Follow symlinks within CVS repository.
 * Fix issue #99: cvs2svn tries to create a file twice.
 * Fix issue #100: cvs2svn doesn't retrieve the right version.
 * Fix issue #105: Conflict between directory and Attic file causes crash.
 * Fix issue #106: SVNRepositoryMirrorParentMissingError.
 * Fix missing command-line handling of --fallback-encoding option.

 Improvements and output changes:
 * Analyze CVS revision dependency graph, giving a more robust conversion.
 * In the case of clock skew to the past, resync forwards, not backwards.
 * Treat timestamps that lie in the future as bogus, and adjust backwards.
 * Gracefully handle tags that refer to nonexistent revisions.
 * Check and fail if revision header appears multiple times.
 * Gracefully handle multiple deltatext blocks for same revision.
 * Be more careful about only processing reasonable *,v files.
 * Improve checks for illegal filenames.
 * Check if a directory name conflicts with a filename.
 * When file is imported, omit the empty revision 1.1.
 * If a non-trunk default branch is excluded, graft its contents to trunk.
 * Require --symbol-transform pattern to match entire symbol name.

 Miscellaneous:
 * Add a simple (nonportable) script to log cvs2svn memory usage.


Version 1.5.1 (28 January 2007)
-------------------------------

 Bugs fixed: